--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Join Aqualink - Aqualink.org" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -21,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Aqualink - Coral Monitoring</title>
+    <title>Aqualink - Ocean Temperature Monitoring</title>
   </head>
 
   <body>
