Add reef image as open graph image (#480)

--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -9,6 +9,11 @@
     />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Join Aqualink - Aqualink.org" />
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:image"
+      content="%PUBLIC_URL%/reef_header.jpg"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
