No preview image for now

--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -9,11 +9,12 @@
     />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Ocean Monitoring" />
-    <meta
+    <!-- TODO - Uncomment once we have a better preview image/logo. -->
+    <!-- <meta
       prefix="og: http://ogp.me/ns#"
       property="og:image"
       content="%PUBLIC_URL%/preview_image.png"
-    />
+    /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
