--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -8,12 +8,13 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Join Aqualink - Aqualink.org" />
-    <meta
+    <meta name="description" content="Ocean Monitoring" />
+    <!-- TODO - Uncomment once we have a better preview image/logo. -->
+    <!-- <meta
       prefix="og: http://ogp.me/ns#"
       property="og:image"
-      content="%PUBLIC_URL%/reef_header.jpg"
-    />
+      content="%PUBLIC_URL%/preview_image.png"
+    /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Aqualink - Ocean Temperature Monitoring</title>
+    <title>Aqualink</title>
   </head>
 
   <body>
